--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,7 @@
             <RadioButton
                 android:id="@+id/rd_confirmed"
                 style="@style/RadioButtonStyle"
+                android:checked="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/text_confirmed" />
@@ -53,7 +54,6 @@
             <RadioButton
                 android:id="@+id/rd_recoverd"
                 style="@style/RadioButtonStyle"
-                android:checked="true"
                 android:text="@string/text_recovered" />
 
             <RadioButton
@@ -87,6 +87,7 @@
             android:gravity="center"
             android:orientation="horizontal"
             android:paddingBottom="10dp"
+            android:paddingTop="10dp"
             app:layout_constraintBottom_toBottomOf="@id/sparkview"
             app:layout_constraintBottom_toTopOf="@id/tickerView_numbers"
             app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +136,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
             android:gravity="center"
+            app:ticker_defaultCharacterList="number"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
