--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_deaths">#FD0000</color>
+    <color name="color_confirmed">#FF5722</color>
+    <color name="color_recovered">#15E81D</color>
 </resources>
