--- a/app/src/main/res/drawable/drawable_button_checked_background.xml
+++ b/app/src/main/res/drawable/drawable_button_checked_background.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/teal_200" />
+    <solid android:color="@color/primaryLightColor" />
     <corners android:radius="8dp" />
     <padding
-        android:bottom="16dp"
-        android:left="16dp"
-        android:right="16dp"
-        android:top="16dp" />
+        android:bottom="10dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="10dp" />
 </shape>
